--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "natural": "^0.5.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17",
-    "stopwords": "0.0.8"
+    "stopwords": "0.0.8",
   },
   "scripts": {
     "start": "react-scripts start",
