--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17",
-    "stopwords": "0.0.8",
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
